refactor var names and remove print statements from controller and template